--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,43 @@
 body{
     margin: 0;
     font-family: 'poppins';
-    background-color: #fffde7;
+    background-color: #414141;
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100vh;
+    /* overflow: hidden;
+    touch-action: manipulation; */
 }
 
 #header{
-    background-color: #ffca28;
+    background-color: rgb(255, 116, 243);
     width: 100%;
     padding: 10px;
     text-align: center;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 3px 6px rgba(255, 116, 243, 1);
+}
+
+#header h1{
+    margin: 0;
+    font-size: 24px;
+    color: #ffffff;
+}
+
+#header p, h2{
+    color: #ffffff;
+}
+
+#pontos{
+    font-size: 20px;
+    margin: 10px 0;
+    color: white;
+}
+
+#game-area{
+    width: 100%;
+    min-width: 400px;
+    background-color: #7c7c7c;
+    border-radius: 10px;
+    flex-grow: 1;
 }
